# agent-run-diff-lab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent-run-diff-lab.config.json  baseline.json  candidate.json  candidate.jsonl
src/agent_run_diff_lab/: __init__.py  cli.py  config.py  diff.py  errors.py  models.py  parser.py  reporters.py
tests/: test_basic.py  test_cli_report_config.py  test_diff.py  test_parser.py
