[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-run-diff-lab"
version = "0.1.0"
description = "Offline diff and CI gate for AI agent run transcripts."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "agent-run-diff-lab contributors"}]
keywords = ["ai-agent", "codex", "claude-code", "mcp", "ci", "diff"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/yanqr213/agent-run-diff-lab"
Issues = "https://github.com/yanqr213/agent-run-diff-lab/issues"

[project.scripts]
agent-run-diff-lab = "agent_run_diff_lab.cli:main"
ardl = "agent_run_diff_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
